--- a/_sass/color_schemes/foo.scss
+++ b/_sass/color_schemes/foo.scss
@@ -1,4 +1,4 @@
-$body-background-color: $grey-dk-300;
+$body-background-color: $grey-lt-000;
 $sidebar-color: $grey-dk-300;
 $border-color: $grey-dk-200;
 
@@ -7,8 +7,8 @@ $body-heading-color: $grey-lt-000;
 $nav-child-link-color: $grey-dk-000;
 $search-result-preview-color: $grey-dk-000;
 
-$link-color: $blue-000;
-$btn-primary-color: $blue-200;
+$link-color: $red-000;
+$btn-primary-color: $red-200;
 $base-button-color: $grey-dk-250;
 
 $code-background-color: $grey-dk-250;
