--- a/_sass/color_schemes/foo.scss
+++ b/_sass/color_schemes/foo.scss
@@ -1,14 +1,15 @@
 $body-background-color: $grey-lt-000;
-$sidebar-color: $grey-dk-300;
-$border-color: $grey-dk-200;
+$sidebar-color: $grey-lt-300;
+$border-color: $grey-dk-300;
 
-$body-text-color: $grey-lt-300;
-$body-heading-color: $grey-lt-000;
-$nav-child-link-color: $grey-dk-000;
+$body-text-color: $grey-dk-200;
+$body-heading-color: $grey-dk-300;
+
 $search-result-preview-color: $grey-dk-000;
 
-$link-color: $red-000;
+$link-color: $red-300;
 $btn-primary-color: $red-200;
+$nav-child-link-color: $red-300;
 $base-button-color: $grey-dk-250;
 
 $code-background-color: $grey-dk-250;
