--- a/_sass/color_schemes/foo.scss
+++ b/_sass/color_schemes/foo.scss
@@ -1,9 +1,9 @@
 $body-background-color: $grey-lt-000;
-$sidebar-color: $grey-lt-300;
-$border-color: $grey-dk-300;
+$sidebar-color: $grey-lt-200;
+$border-color: $grey-lt-300;
 
-$body-text-color: $grey-dk-200;
-$body-heading-color: $grey-dk-300;
+$body-text-color: $grey-dk-100;
+$body-heading-color: $grey-dk-200;
 
 $search-result-preview-color: $grey-dk-000;
 
@@ -12,6 +12,10 @@ $btn-primary-color: $red-200;
 $nav-child-link-color: $red-300;
 $base-button-color: $grey-dk-250;
 
-$code-background-color: $grey-dk-250;
+$code-background-color: $grey-dk-150;
+$code-text-color: $grey-lt-000;
+
 $search-background-color: $grey-dk-250;
+$search-text-color: $red-300;
+
 $table-background-color: $grey-dk-250;
