--- a/_sass/color_schemes/foo.scss
+++ b/_sass/color_schemes/foo.scss
@@ -12,9 +12,23 @@ $btn-primary-color: $red-200;
 $nav-child-link-color: $red-300;
 $base-button-color: $grey-dk-250;
 
-$code-background-color: $grey-dk-100;
+$code-background-color: $grey-lt-200;
 $code-text-color: $grey-lt-000;
 
 $search-background-color: $grey-dk-250;
 
 $table-background-color: $grey-dk-250;
+
+//$body-background-color: $white;
+//$sidebar-color: $grey-lt-000;
+//$search-background-color: $white;
+//$table-background-color: $white;
+//$code-background-color: $grey-lt-000;
+
+//$body-text-color: $grey-dk-100;
+//$body-heading-color: $grey-dk-300;
+//$search-result-preview-color: $grey-dk-000;
+//$nav-child-link-color: $grey-dk-100;
+//$link-color: $purple-000;
+//$btn-primary-color: $purple-100;
+//$base-button-color: #f7f7f7;
