--- a/_sass/color_schemes/foo.scss
+++ b/_sass/color_schemes/foo.scss
@@ -17,7 +17,7 @@ $code-text-color: $grey-lt-000;
 
 $search-background-color: $grey-dk-250;
 
-$table-background-color: $grey-dk-250;
+$table-background-color: $grey-lt-200;
 
 //$body-background-color: $white;
 //$sidebar-color: $grey-lt-000;
