--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,9 +11,13 @@
       <meta name="Description" content="{{ page.description }}">
     {% endif %}
   {% endunless %}
+
+  <link rel="shortcut icon" href="{{ 'favicon.ico' | relative_url }}" type="image/x-icon">
   -->
   
-  <link rel="shortcut icon" href="{{ 'favicon.ico' | relative_url }}" type="image/x-icon">
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+  
+  
 
 <!--
   <link rel="stylesheet" href="{{ '/assets/css/just-the-docs-default.css' | relative_url }}">
